fichero .gitignore modificado con todo loq ue tenemos que ignorar

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 /.bundle/
-/.yardoc
-/Gemfile.lock
-/_yardoc/
+Gemfile.lock
 /coverage/
 /doc/
 /pkg/
 /spec/reports/
 /tmp/
+*~
+*.rbc
+.config
+InstalledFiles
+lib/bundler/man
+rdoc
